--- a/recipes/tomatoes.html
+++ b/recipes/tomatoes.html
@@ -8,5 +8,23 @@
 </head>
 <body>
     <h1>Southern Fried Green Tomatoes</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Fba80f414369d9840fa0f9f436dcea3e0%2F1660239988Southern%20Fried%20Green%20Tomatoes.jpeg&w=874&h=585&c=sc&poi=face&q=60">
+    <h2>Description</h2>
+    <p>This is a recipe that I like.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 extra large egg</li>
+        <li>4 tablespoons milk</li>
+        <li>1 cup cornmeal</li>
+        <li>1 cup all-purpose flour</li>
+        <li>3 tablespoons extra virgin olive oil</li>
+        <li>3 green tomatoes, sliced</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>In a small bowl whisk together egg and milk. In another small bowl mix cornmeal and flour.</li>
+        <li>Heat oil in a large skillet over medium heat; use more or less oil to reach about 1/4 inch in depth.</li>
+        <li>Dredge tomato slices first in egg mixture, then in cornmeal mixture. Carefully place slices in hot oil and cook until browned on both sides.</li>
+    </ol>
 </body>
 </html>
