--- a/recipes/corn.html
+++ b/recipes/corn.html
@@ -10,6 +10,8 @@
     <h1>Grilled Herbed Corn on the Cob</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4515777.jpg&w=596&h=399&c=sc&poi=face&q=60">
     <h2>Description</h2>
+    <p>My husband didn't like corn on the cob until he had this recipe!</p>
+    <h2>Ingredients</h2>
     <ul>
         <li>6 ears fresh corn on the cob, husked</li>
         <li>6 tablespoons sweet butter, softened</li>
