--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="tomatoes.html">Southern Fried Green Tomatoes</a>
+    <ul>
+        <li><a href="recipes/tomatoes.html">Southern Fried Green Tomatoes</a></li>
+        <li><a href="recipes/corn.html">Grilled Herbed Corn on the Cob</a></li>
+        <li><a href="recipes/pie.html">Peanut Butter Pie XV</a></li>
+    </ul>
 </body>
 </html>
